daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N18_bad_review_receipt/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3015840e901b9b34020004a9f1ac97e66e2fd6ffb8fcab7b51ae258fcc591662c2054374da6c188e996bce9380a86809413c1ec453c6fd490a7a417c543a0a66e5a15d701f602f6
